syntax = "proto3"; // specifying the syntax version of the protocol buffers.
message PasswordDetails {
    string id = 1;
    string password = 2;
    string hashValue = 3;
    string saltValue = 4;
}
// Password Service and its 3 methods.
service PasswordService {
    rpc RetrievePasswords (Empty) returns (PasswordList) {}
    rpc AddNewDetails (PasswordDetails) returns (PasswordDetails) {}
    rpc UpdatePasswordDetails (PasswordDetails) returns (PasswordDetails) {}
}
message Empty {}
message PasswordList {
   repeated PasswordDetails passwords = 1;
}